PROD-9-26-19/force-app/main/default/objects/Coverage__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Investing_Interest_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>