PROD-9-26-19/force-app/main/default/objects/Coverage__c/fields/Account_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Relationship_Type__c</fullName>
    <formula>TEXT( Account__r.PFG_Relationship_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Relationship Type</label>
    <type>Text</type>
</CustomField>