PROD-9-26-19/force-app/main/default/objects/Coverage__c/fields/CRM__c.field-meta.xml
<CustomField>
    <fullName>CRM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Investing_Interest_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>