PROD-9-26-19/force-app/main/default/objects/Coverage__c/fields/Investing_Status__c.field-meta.xml
<CustomField>
    <fullName>Investing_Status__c</fullName>
    <inlineHelpText>Active: Investor is currently looking to deploy capital within a given asset class in the next 18 months.

Not Active: Investor is not currently looking to deploy capital within a given asset class in the next 18 months.</inlineHelpText>
    <label>Investing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Not Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>