PROD-9-26-19/force-app/main/default/objects/Coverage__c/listViews/Account_Coverage_Changes.listView-meta.xml
<ListView>
    <fullName>Account_Coverage_Changes</fullName>
    <columns>Account__c</columns>
    <columns>CRM__c</columns>
    <columns>Business_Group__c</columns>
    <columns>Role__c</columns>
    <columns>Relationship_Importance__c</columns>
    <columns>Account_Status__c</columns>
    <columns>Account_Relationship_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CRM__c</field>
        <operation>equals</operation>
        <value>Marco Di Girolamo</value>
    </filters>
    <label>Account Coverage Changes</label>
    <sharedTo>
        <group>PFG_Support_Group</group>
    </sharedTo>
</ListView>