PROD-9-26-19/force-app/main/default/objects/Coverage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Business_Group__c</columns>
    <columns>CRM__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Relationship_Importance__c</columns>
    <columns>Role__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CRM__c</field>
        <operation>equals</operation>
        <value>Robert White</value>
    </filters>
    <filters>
        <field>Business_Group__c</field>
        <operation>equals</operation>
        <value>Real Estate</value>
    </filters>
    <label>All</label>
</ListView>