PROD-9-26-19/force-app/main/default/objects/Coverage__c/listViews/PFG_Coverage_Change.listView-meta.xml
<ListView>
    <fullName>PFG_Coverage_Change</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Business_Group__c</columns>
    <columns>CRM__c</columns>
    <columns>Relationship_Importance__c</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CRM__c</field>
        <operation>equals</operation>
        <value>Keith Smith</value>
    </filters>
    <filters>
        <field>Business_Group__c</field>
        <operation>equals</operation>
        <value>Real Asset / Infra</value>
    </filters>
    <label>PFG Coverage Change</label>
</ListView>